SERVER-45718 Index builder ensures empty collection by reading data from the WT cursor in order to avoid false negatives by fast count.